[package]
name = "homelander"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.1.0"
actix-cors = "0.6.1"
thiserror = "1.0.31"
tracing = "0.1.35"
tracing-actix-web = "0.6.0"
rand = "0.8.5"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies]
serde_json = "1.0"